# hotwheelsCatalog

./: .gitignore  README.md  app.py  cogs.py  configs.py  htmlMng.py  lambos.csv  pyproject.toml  requirements.txt  setup.py  seuarquivo_modificado.html  showme.py  test.yml  url_filter.py  writer.py
.github/workflows/: test.yml
_env/: pyvenv.cfg
_env/Scripts/: activate  activate.bat  jp.py
cogs/: async_processing.py  customized_print.py  html_handle.py  html_handler.py  search_engine.py  showme.py  spider.py  spider_configs.py  writer.py
data/: car_names_dumped_file.csv  mainCars.csv  manufacture.csv  models.csv
front/: main.html  script.js  style.css
spider/: async_processing.py  html_handler.py  search_engine.py  showme.py  spider.py  spider_configs.py  time_controler.py  writer.py
tests/: test_async_processing.py  test_html_handler.py
