[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "hotwheelsCatalog"
version = "0.1.0"
description = "A Webscraping Python project that searches for car miniatures in a specific forum"
authors = ["Junior <rb_jp@hotmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dependencies.attrs]
version = "23.1.0"

[tool.poetry.dependencies.Automat]
version = "22.10.0"

[tool.poetry.dependencies.beautifulsoup4]
version = "4.12.2"

[tool.poetry.dependencies.blinker]
version = "1.6.2"

[tool.poetry.dependencies.certifi]
version = "2023.5.7"

[tool.poetry.dependencies.cffi]
version = "1.15.1"

[tool.poetry.dependencies.charset-normalizer]
version = "3.1.0"

[tool.poetry.dependencies.click]
version = "8.1.7"

[tool.poetry.dependencies.colorama]
version = "0.4.6"

[tool.poetry.dependencies.constantly]
version = "15.1.0"

[tool.poetry.dependencies.contourpy]
version = "1.1.0"

[tool.poetry.dependencies.cryptography]
version = "40.0.2"

[tool.poetry.dependencies.cssselect]
version = "1.2.0"

[tool.poetry.dependencies.cycler]
version = "0.11.0"

[tool.poetry.dependencies.exceptiongroup]
version = "1.1.3"

[tool.poetry.dependencies.filelock]
version = "3.12.0"

[tool.poetry.dependencies.Flask]
version = "2.3.3"

[tool.poetry.dependencies.fonttools]
version = "4.42.0"

[tool.poetry.dependencies.fuzzywuzzy]
version = "0.18.0"

[tool.poetry.dependencies.html5lib]
version = "1.1"

[tool.poetry.dependencies.hyperlink]
version = "21.0.0"

[tool.poetry.dependencies.idna]
version = "3.4"

[tool.poetry.dependencies.importlib-metadata]
version = "6.8.0"

[tool.poetry.dependencies.importlib-resources]
version = "6.0.1"

[tool.poetry.dependencies.incremental]
version = "22.10.0"

[tool.poetry.dependencies.iniconfig]
version = "2.0.0"

[tool.poetry.dependencies.itemadapter]
version = "0.8.0"

[tool.poetry.dependencies.itemloaders]
version = "1.1.0"

[tool.poetry.dependencies.itsdangerous]
version = "2.1.2"

[tool.poetry.dependencies.jedi]
version = "0.19.0"

[tool.poetry.dependencies.Jinja2]
version = "3.1.2"

[tool.poetry.dependencies.jmespath]
version = "1.0.1"

[tool.poetry.dependencies.kiwisolver]
version = "1.4.4"

[tool.poetry.dependencies.lxml]
version = "4.9.2"

[tool.poetry.dependencies.MarkupSafe]
version = "2.1.3"

[tool.poetry.dependencies.matplotlib]
version = "3.7.2"

[tool.poetry.dependencies.numpy]
version = "*"

[tool.poetry.dependencies.packaging]
version = "23.1"

[tool.poetry.dependencies.pandas]
version = "2.0.3"

[tool.poetry.dependencies.parsel]
version = "1.8.1"

[tool.poetry.dependencies.parso]
version = "0.8.3"

[tool.poetry.dependencies.Pillow]
version = "10.0.0"

[tool.poetry.dependencies.pluggy]
version = "1.3.0"

[tool.poetry.dependencies.Protego]
version = "0.2.1"

[tool.poetry.dependencies.pudb]
version = "2022.1.3"

[tool.poetry.dependencies.pyasn1]
version = "0.5.0"

[tool.poetry.dependencies.pyasn1-modules]
version = "0.3.0"

[tool.poetry.dependencies.pycparser]
version = "2.21"

[tool.poetry.dependencies.PyDispatcher]
version = "2.0.7"

[tool.poetry.dependencies.Pygments]
version = "2.16.1"

[tool.poetry.dependencies.pyOpenSSL]
version = "23.1.1"

[tool.poetry.dependencies.pyparsing]
version = "3.0.9"

[tool.poetry.dependencies.pytest]
version = "7.4.2"

[tool.poetry.dependencies.python-dateutil]
version = "2.8.2"

[tool.poetry.dependencies.pytz]
version = "2023.3"

[tool.poetry.dependencies.queuelib]
version = "1.6.2"

[tool.poetry.dependencies.requests]
version = "2.30.0"

[tool.poetry.dependencies.requests-file]
version = "1.5.1"

[tool.poetry.dependencies.Scrapy]
version = "2.9.0"

[tool.poetry.dependencies.service-identity]
version = "21.1.0"

[tool.poetry.dependencies.six]
version = "1.16.0"

[tool.poetry.dependencies.soupsieve]
version = "2.4.1"

[tool.poetry.dependencies.tldextract]
version = "3.4.2"

[tool.poetry.dependencies.tomli]
version = "2.0.1"

[tool.poetry.dependencies.typing_extensions]
version = "4.5.0"

[tool.poetry.dependencies.tzdata]
version = "2023.3"

[tool.poetry.dependencies.urllib3]
version = "2.0.2"

[tool.poetry.dependencies.urwid]
version = "2.1.2"

[tool.poetry.dependencies.urwid-readline]
version = "0.13"

[tool.poetry.dependencies.w3lib]
version = "2.1.1"

[tool.poetry.dependencies.webencodings]
version = "0.5.1"

[tool.poetry.dependencies.Werkzeug]
version = "2.3.7"

[tool.poetry.dependencies.zipp]
version = "3.16.2"
